force-app/main/default/objects/Account/fields/Account_related_to__c.field-meta.xml
<CustomField>
    <fullName>Account_related_to__c</fullName>
    <label>Account related to</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>