force-app/main/default/objects/Account/fields/enq_nbr__c.field-meta.xml
<CustomField>
    <fullName>enq_nbr__c</fullName>
    <label>enq nbr</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>